<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginTop="10dip"
	     >
	
	    <ImageView
	        android:id="@+id/img_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/logo" 
	        android:layout_centerHorizontal="true"/>
	
	
	
	    <RelativeLayout
	        android:id="@+id/relativeLayout1"
	        android:layout_width="match_parent"
	        android:layout_below="@id/img_logo"
	        android:layout_marginBottom="15dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginTop="15dp" 
	        android:background="@drawable/block_panel" 
	        android:layout_height="wrap_content">
	
	
	        <TextView
	            android:id="@+id/tv_un"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            
	            android:text="@string/username"
	            android:textColor="@color/white"
	            android:textSize="10pt" 
	            android:layout_marginLeft="9dp" 
	            android:layout_marginRight="10dp" 
	            android:layout_marginTop="15dp"/>
	
	        <EditText
	            android:id="@+id/et_un"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@android:drawable/editbox_background" 
	            android:layout_toRightOf="@id/tv_un" 
	            android:layout_alignTop="@id/tv_un" 
	            android:layout_marginRight="9dp">
	
	            <requestFocus />
	        </EditText>
	        
	        <TextView
	            android:id="@+id/tv_pw"
	            android:layout_width="wrap_content"
	            android:layout_height="50dp"
	            android:layout_marginTop="15dp"
	            android:text="@string/password"
	            android:textColor="@color/white"
	            android:textSize="10pt" 
	            android:layout_marginRight="9dp" 
	            android:layout_marginLeft="10dp" 
	            android:layout_below="@id/tv_un"/>
	
	        <EditText
	            android:id="@+id/et_pw"
	            android:layout_height="wrap_content"
	            android:background="@android:drawable/editbox_background"
	            android:layout_alignRight="@id/et_un"
	            android:layout_alignTop="@id/tv_pw" 
	            android:layout_alignLeft="@id/et_un" 
	            android:layout_width="match_parent"
				android:inputType="textPassword"/>
	    </RelativeLayout>
	
	    <Button
	        android:id="@+id/btn_login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/relativeLayout1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="5dp"
	        android:text="@string/login" 
	        android:background="@drawable/menu_button"/>
	
	    <TextView
	        android:id="@+id/tv_error"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/btn_login"
	        android:layout_marginTop="15dp"
	        android:textColor="@color/error_message"
	        android:textSize="7pt" 
	        android:gravity="center_horizontal" 
	        android:layout_marginLeft="5dp" 
	        android:layout_marginRight="5dp" 
	        android:textStyle="bold"/>
	</RelativeLayout>
</ScrollView>
